update: added options fragment with dummy data
1. options fragment
2. option modal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TilesMatch</string>
+
+    <string name="btn_select">Select</string>
+
+    <string name="cd_select_button">Select Button</string>
 </resources>
