--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">TilesMatch</string>
 
     <string name="btn_select">Select</string>
+    <string name="btn_reset">Reset</string>
 
     <string name="cd_select_button">Select Button</string>
+    <string name="cd_back_button">Back Button</string>
 </resources>
