--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="cd_select_button">Select Button</string>
     <string name="cd_back_button">Back Button</string>
+    <string name="cd_game_tile">Game Tile</string>
 </resources>
