--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="cd_select_button">Select Button</string>
     <string name="cd_back_button">Back Button</string>
     <string name="cd_game_tile">Game Tile</string>
+    <string name="cd_reset_button">Reset Button</string>
 </resources>
