misc: miscellaneous changes
1. code cleanup
2. code documentation
3. deleting unwanted resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">TilesMatch</string>
 
+    <string name="label_count">Moves: %d</string>
+
     <string name="btn_select">Select</string>
-    <string name="btn_reset">Reset</string>
 
     <string name="cd_select_button">Select Button</string>
+    <string name="cd_option_item">Option Item</string>
     <string name="cd_back_button">Back Button</string>
     <string name="cd_game_tile">Game Tile</string>
     <string name="cd_reset_button">Reset Button</string>
