update: undo button added
1. undo functionality added
2. misc. formatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="cd_back_button">Back Button</string>
     <string name="cd_game_tile">Game Tile</string>
     <string name="cd_reset_button">Reset Button</string>
+    <string name="cd_undo_button">Undo Button</string>
 </resources>
