update: initial set up for material you theme
1. material dependency upgraded
2. base application class added
3. manifest changes
4. colors updated
5. themes updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="btn_select">Select</string>
 
-    <string name="cd_select_button">Select Button</string>
+    <string name="cd_settings_button">Settings Button</string>
     <string name="cd_option_item">Option Item</string>
     <string name="cd_back_button">Back Button</string>
     <string name="cd_game_tile">Game Tile</string>
